Revision history for Mojolicious::Plugin::CaptchaPNG

{{$NEXT}}

1.07      2025-06-13 10:27:09-07:00 America/Los_Angeles
        - Add security policy as per CPANSec recommendation
        - Improve urand function as per CPANSec recommendation

1.06      2025-06-11 07:07:50-07:00 America/Los_Angeles
        - Use Crypt::URandom to provide urand as rand replacement

1.05      2025-06-10 18:39:15-07:00 America/Los_Angeles
        - Tiny POD update

1.04      2025-05-18 10:47:06-07:00 America/Los_Angeles
        - Remove Math::Random::Secure dependency

1.03      2025-02-05 10:57:16-08:00 America/Los_Angeles
        - Add set_captcha_value (for easier testing, I guess)

1.02      2025-02-04 16:27:13-08:00 America/Los_Angeles

1.01      2025-02-04 16:08:33-08:00 America/Los_Angeles
        - First version, released on an unsuspecting world