@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.032.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.033.
 use strict;
 use warnings;
 
@@ -18,6 +18,7 @@ my %WriteMakefileArgs = (
   "NAME" => "Mojolicious::Plugin::CaptchaPNG",
   "PREREQ_PM" => {
     "Crypt::URandom" => 0,
+    "Data::Password::Entropy" => 0,
     "GD" => "2.83",
     "GD::Image" => 0,
     "Mojo::Base" => 0,
@@ -35,7 +36,7 @@ my %WriteMakefileArgs = (
     "Test2::V0" => 0,
     "Test::More" => 0
   },
-  "VERSION" => "1.07",
+  "VERSION" => "1.08",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -44,6 +45,7 @@ my %WriteMakefileArgs = (
 
 my %FallbackPrereqs = (
   "Crypt::URandom" => 0,
+  "Data::Password::Entropy" => 0,
   "File::Spec" => 0,
   "GD" => "2.83",
   "GD::Image" => 0,
