@@ -1,6 +1,7 @@
 Revision history for Mojolicious::Plugin::CaptchaPNG
 
 {{$NEXT}}
+        - Encourage captcha value encryption as per CPANSec recommendation
 
 1.07      2025-06-13 10:27:09-07:00 America/Los_Angeles
         - Add security policy as per CPANSec recommendation
